# reagent

./: 404.html  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
docker/: compose.hatchet-lite.yaml  compose.hatchet.yaml
docs/getting-started/: installation.md  philosophy.md  quick-start.md
examples/: test.py
examples/chatbot/: __main__.py
getting-started/installation/: index.html
getting-started/philosophy/: index.html
getting-started/quick-start/: index.html
reagent/: agent.py  local_python_exec.py  messages.py  model_providers.py  settings.py  tools.py
reagent/core/: __init__.py  agent.py  catalog.py  fht.py  ledger.py  memory.py  messages.py  model_providers.py  network.py  one_take.py  store.py  taskable.py  tool.py  tools.py  utils.py
reagent/core/agent/: agent.py  spaces.py
reagent/core/agent/phases/: planning.py  space_init.py
reagent/core/api/: catalog.py  main.py  server.py
reagent/core/converters/: base.py
reagent/core/dependencies/: db.py  engine.py  hatchet.py  migrator.py  registry.py  session.py  settings.py
reagent/core/llm_providers/: openai.py
reagent/core/llms/: groq.py  llms.py  openai.py
reagent/core/memory/: base.py
reagent/core/models/: __init__.py  base.py  config.py  errors.py  ledger.py  settings.py  types.py
reagent/core/types/: __init__.py  errors.py  types.py
reagent/dx/: local_ledger.py  local_store.py
reagent/extras/cli/: cli.py  migrate.py
reagent/ilpas/core/: catalog.py  constants.py  httpx.py  hub.py  instance.py  integration.py  specification.py  store.py
reagent/ilpas/core/models/: __init__.py  base.py  config_response.py  errors.py  instance.py  types.py  webhook.py
reagent/ilpas/dx/: helpers.py  in_memory_store.py
reagent/ilpas/extras/cli/: api_main.py  cli.py
reagent/ilpas/migrations/: alembic.ini
reagent/ilpas/migrations/public/: env.py
reagent/ilpas/migrations/tenant/: env.py
reagent/llm_providers/: openai.py
reagent/meta/: self_writing.py
reagent/migrations/: README.md  alembic.ini  manager.py
reagent/migrations/namespace/: env.py
reagent/migrations/namespace/versions/: 5b469d07f3be_initial.py
reagent/migrations/shared/: env.py
reagent/migrations/shared/versions/: 3f08512a51c5_initial.py
reagent/prompts/: base.py  preamble.py
reagent/providers/: openai.py
reagent/reagent/builtin_tools/: local_python_exec.py
reagent/reagent/core/: agent.py  fht.py  ledger.py  memory.py  model_providers.py  one_take.py  space.py  tools.py
reagent/reagent/dx/: local_store.py
reagent/reagent/llm_providers/: groq.py
reagent/reagent/state_stores/: local.py
reagent/state_stores/: local.py
reagent/types/: configs.py  errors.py
search/: search_index.json
tests/: api.py  basic_groq_test.py  basic_openai_test.py  basic_test.py  catalog.py  chatbot_test.py  settings.py  tool_call_test.py  worker.py
tests/hatchet/basic/: basic_test.py  worker.py
tests/hatchet/fht/: fht_test.py  worker.py
tests/ilpas/: api.py  config_test.py  in_memory_store_test.py
tests/reagent/: basic_groq_test.py  chatbot_test.py
tests/reagent_tests/: basic_openai_test.py  settings.py
tests/reagent_tests/hatchet/: conftest.py
tests/reagent_tests/hatchet/basic/: basic_test.py  worker.py
tests/reagent_tests/hatchet/fht/: fht_test.py  functions.py
